[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pine-voice"
version = "0.1.0"
description = "Official Pine AI Voice SDK — make phone calls via Pine's AI voice agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Pine AI" }]
keywords = ["pine", "pine-ai", "voice", "phone", "call", "sdk", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://pineclaw.com"
Repository = "https://github.com/pine-ai/pine-voice-python"
Documentation = "https://pineclaw.com/api.html"
